--- a/linux/ldap.org
+++ b/linux/ldap.org
@@ -138,6 +138,8 @@ E0F
 netstat -antup | grep -i 389
 ldapsearch -x
 ldapsearch -x -b "dc=amitthk,dc=mywire,dc=org" "(objectclass=*)"
+
+ldapsearch  -h ldap.amitthk.com -p 389 -x -b 'dc=ldap,dc=amitthk,dc=com' '(objectClass=*)'
 #+END_SRC
 
 **** Use this command to run an ldif ahead
